--- a/Single-cycle CPU/exp12.qsf
+++ b/Single-cycle CPU/exp12.qsf
@@ -435,4 +435,5 @@ set_global_assignment -name VERILOG_FILE vga/vga_font.v
 set_global_assignment -name VERILOG_FILE "temp-debug/exp08.v"
 set_global_assignment -name VERILOG_FILE "temp-debug/ps2_keyboard.v"
 set_global_assignment -name VERILOG_FILE "temp-debug/ram.v"
+set_global_assignment -name VERILOG_FILE cpu/shift.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
